# risk-layer

./: .env.example  .gitignore  CLAUDE.md  DEPLOY_NOTES.md  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
app/api/: main.py
app/api/routes/: admin.py  alerts.py  health.py  stocks.py
app/classification/: mapper.py
app/core/: config.py  constants.py  logging.py  market_calendar.py
app/data/pipelines/: ingest_prices.py
app/data/providers/: active_universe.py  benchmark_data.py  market_data.py
app/db/: models.py  schemas.py  session.py
app/db/migrations/: env.py
app/features/: feature_pipeline.py  indicators.py  labeling.py  regime_detection.py  relative_context.py
app/jobs/: backfill.py  daily_digest.py  daily_ingest.py  daily_predict.py  weekly_eval.py
app/models/artifacts/: model_continue_3d_v1_wf.json  (+6 more)
app/services/: digest_service.py  outcome_service.py  ranking_service.py  stock_analysis_service.py
app/tests/: conftest.py  test_api.py  test_data_integrity.py  test_execution_engine.py  test_features.py  test_labeling.py  test_mapping.py  test_walk_forward.py
docs/: api_spec.md  product_spec.md
frontend/: account.html  index.html  landing.html
risklayer/: __init__.py
risklayer/execution/: README.md  __init__.py  _candles.py  config.py  decision_types.py  entry_evaluator.py  ev.py  portfolio_allocator.py  position_manager.py
scripts/: run_backfill.py  run_daily.py  run_entry_check.py  run_train_all.py  run_week_validation.py
server/: .env.example  index.js  package.json
tests/execution/: test_execution_engine.py
(+6 files in other folders)
